# kanniestilstaan

./: CMakeLists.txt  README.md  SCHEDULE.md
08-dot-product-struct2/src/: dot-product-struct2.cxx
09-copy-move/src/: copy-move.cxx
10-integration/src/: integration.cxx
H01-swap/src/: swap.cxx
H02-arrays/src/: arrays.cxx
H03-reverse-engineering/src/: reverse-engineering.cxx
H04-points-triangles/src/: points-triangles.cxx
H05-copy-move/: CMakeLists.txt
H05-copy-move/src/: movecopy.cxx
H06-derivatives/: CMakeLists.txt
H06-derivatives/src/: derivatives.cxx
H07-templates/: CMakeLists.txt
H07-templates/src/: templates.cxx
H08-unit-converter/: CMakeLists.txt
H08-unit-converter/src/: unit-converter.cxx
H09-symbolic-differentiation/: CMakeLists.txt
H09-symbolic-differentiation/src/: symbolic-differentiation.cxx
H10-add-vectors/: CMakeLists.txt
H10-add-vectors/src/: add-vectors.cxx
H11-heat-equation/: CMakeLists.txt
H11-heat-equation/src/: Part2  heat-equation.cxx
